# KHPCG3.0

./: CMakeLists.txt
src/: .ComputeMG.cpp.swp  .Vector.hpp.swp  CG.cpp  CMakeLists.txt  ColorReorder.cpp  ColorReorder.hpp  ColorSYMGS.cpp  Coloring.cpp  Coloring.hpp  ComputeDotProduct.cpp  ComputeDotProduct.hpp  ComputeMG.cpp  ComputeMG.hpp  ComputeSPMV.cpp  ComputeSPMV.hpp  ComputeSYMGS.cpp  ComputeSYMGS.hpp  ComputeWAXPBY.cpp  ComputeWAXPBY.hpp  KokkosSetup.hpp  LevelSYMGS.cpp  LevelScheduler.cpp  LevelScheduler.hpp  Levels.hpp  OptimizeProblem.cpp  OptimizeProblem.hpp  SparseMatrix.hpp  TestCG.cpp  TestSymmetry.cpp  Vector.hpp  main.cpp
